Deploy GoldenPath capsule

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><title>Jetstreamin Launchpad</title></head><body><h1>GoldenPath is Live</h1></body></html>
+<!doctype html><html><head><title>GoldenPath</title></head><body><h1>GoldenPath Ready</h1><a href="GoldenPath.sh" download>Download Capsule</a><br><audio controls src="goldenpath_intro.mp3"></audio></body></html>
